Fix APi for get thesis requests list
