# server/api/openapi.yaml
@@ -123,9 +123,16 @@ components:
             - Change
             - Accepted
             - Rejected
+        date:
+          type: string
+          format: date
         approvalDate:
           type: string
           format: date
+        professorRequestChangesMessage:
+          type: string
+          minLength: 1
+          maxLength: 1000
         self:
           type: string
           format: uri
@@ -148,6 +155,20 @@ components:
           studentId:
             type: string
             pattern: ^(s|S)[0-9]{6}$
+          secretaryStatus:
+            enum:
+              - Pending
+              - Accepted
+              - Rejected
+          professorStatus:
+            enum:
+              - Pending
+              - Change
+              - Accepted
+              - Rejected
+          date:
+            type: string
+            format: date
           self:
             type: string
             format: uri
@@ -635,6 +656,15 @@ paths:
           schema:
             type: string
             pattern: ^((c|C)|(p|P))[0-9]{6}$
+        - name: cosupervisor
+          description: >-
+            This parameter it is possible to specify in the case of professor
+            request and allow to retrieve only thesis request where the
+            professor is the supervisor or only where he is co-supervisor
+          in: query
+          required: false
+          schema:
+            type: boolean
       responses:
         '200':
           description: OK
